# Marks-A55-Code

./: API  CMakeLists.txt  CMakeLists_1.txt  CoreA55_Example.c  CoreA55_Example.h  CoreM33_Example.c  CoreM33_Example.h  GUI  README.md  TestBench  TestBench-board-CoreM33.elf  TestBench.c  build-boardcross-CoreA55.sh  build-boardcross-CoreM33.sh  build-boardcross.sh  build-emscripten.sh  build-wincross.sh  build.bat  build.sh  lvgl_shell.html  run-emscripten.sh  run-wincross.sh  run.sh
Modules/Common/: alloc.h
Modules/Common/CoreMessaging/: CoreMessaging.c  CoreMessaging.h
Modules/Common/GUI_API/: GUI_API.h  GUI_API_Constants.h  GUI_API_Events.h  GUI_API_Includes.h  GUI_API_VariableDescriptors.h  GUI_API_Variables.h
Modules/CoreA55/CoreMessaging/: CoreA55_CoreMessaging.c.org  CoreA55_CoreMessaging.h
Modules/CoreA55/GUI/: App_Bindings.c  App_bindings.h  CMakeLists.txt  GUI.c  GUI.h  GUI_Internal.c  GUI_Internal.h  GUI_unified.h  lv_conf.h
Modules/CoreA55/GUI/GUI_InitScreens/: GUI_InitScreenValues.c  GUI_InitScreens.c  GUI_InitScreens.h
Modules/CoreA55/GUI/GUI_NonSync_GUItoApp/: GUI_NonSync_GUItoApp.c  GUI_NonSync_GUItoApp.h  GUI_NonSync_GUItoApp_internal.h  Screen__Advanced_Settings.c  Screen__Communications.c  Screen__Firmware_Update.c  Screen__Generic_Password.c  Screen__Home.c  Screen__Initial_Setup.c  Screen__Maintenance.c  Screen__Popup_Modal.c  Screen__Pump_Settings.c  Screen__Select_Option.c  Screen__Self_Test.c  Screen__StartupSplash.c
Modules/CoreA55/GUI/GUI_Synch_AppToGUI/: GUI_Synch_AppToGUI.c  GUI_Synch_AppToGUI.h  GUI_Synch_AppToGUI_internal.h  ObserverBindings.c  ObserverConverters.c
Modules/CoreA55/GUI/GUI_Toolkit/: GUI_Toolkit.c  GUI_Toolkit.h  GUI_Toolkit_Callbacks.c  GUI_Toolkit_Selectors.c  GUI_Toolkit_internal.h
Modules/CoreA55/GUI/GUI_Toolkit/ObserverModifier/: Modifier.c  Observer.c  ObserverModifier.c  ObserverModifier.h  ObserverModifier_internal.h
Modules/CoreA55/GUI/HAL/: CMakeLists.txt  HAL.c  HAL.h
Modules/CoreA55/GUI/lvgl/env_support/rt-thread/: lv_rt_thread_port.c
Modules/CoreA55/GUI/lvgl/src/: lv_port_fs_linux.c
Modules/CoreA55/GUI/lvgl/src/drivers/libinput/: lv_libinput.c
Modules/CoreA55/GUI/lvgl/src/misc/: lv_fs.c
Modules/CoreA55/GUI/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
Modules/CoreA55/GUI/ui/components/: ui_comp.c  ui_comp.h  ui_comp_backmenu.c  ui_comp_backmenu.h  ui_comp_checkboxoption.c  ui_comp_checkboxoption.h  ui_comp_contorlbutton.c  ui_comp_contorlbutton.h  ui_comp_dropdown.c  ui_comp_dropdown.h  ui_comp_header.c  ui_comp_header.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_input.c  ui_comp_input.h  ui_comp_keyboardl.c  ui_comp_keyboardl.h  ui_comp_menu.c  ui_comp_menu.h  ui_comp_menubutton.c  ui_comp_menubutton.h  ui_comp_numpad_m.c  ui_comp_numpad_m.h  ui_comp_popup.c  ui_comp_popup.h  ui_comp_primarybtn.c  ui_comp_primarybtn.h  ui_comp_rollercard.c  ui_comp_rollercard.h  ui_comp_rollersmall.c  ui_comp_rollersmall.h  ui_comp_secondarybtn.c  ui_comp_secondarybtn.h  ui_comp_switch.c  ui_comp_switch.h  ui_comp_tabbutton.c  ui_comp_tabbutton.h  ui_comp_tabcontentinitial.c  ui_comp_tabcontentinitial.h
Modules/CoreA55/GUI/ui/fonts/: ui_font_H1_Bold.c  ui_font_P1_Bold.c  ui_font_P2_Med.c  ui_font_P2_SBold.c  ui_font_P3_Bold.c
Modules/CoreA55/GUI/ui/images/: ui_img_1103698869.c  ui_img_1103699894.c  ui_img_1103703233.c  ui_img_1103704258.c  ui_img_1103705283.c  ui_img_1103706308.c  ui_img_1103707581.c  ui_img_1103709631.c  ui_img_1103710656.c  ui_img_1184773468.c  ui_img_1184774493.c  ui_img_1184777816.c  ui_img_1184778841.c  ui_img_1184779866.c  ui_img_1184780891.c  ui_img_arrow_png.c  ui_img_back_png.c  ui_img_chack_png.c  ui_img_checkbox_checked_vector_png.c  ui_img_home_buttons_purge_png.c  ui_img_home_chevron_down_png.c  ui_img_home_chevron_png.c  ui_img_home_house_png.c  ui_img_home_menus_desktop_png.c  ui_img_home_menus_usb_png.c  ui_img_home_menus_wifi_png.c  ui_img_home_pump_png.c  ui_img_home_setup_png.c  ui_img_initial_setup_png.c  ui_img_logo_png.c  ui_img_option1_png.c
Modules/CoreA55/GUI/ui/screens/: ui_Screen__Advanced_Settings.c  ui_Screen__Communications.c  ui_Screen__Firmware_Update.c  ui_Screen__Generic_Password.c  ui_Screen__Home.c  ui_Screen__Initial_Setup.c  ui_Screen__Maintenance.c  ui_Screen__Popup_Modal.c  ui_Screen__Pump_Settings.c  ui_Screen__Select_Option.c  ui_Screen__Self_Test.c  ui_Screen__StartupSplash.c
Modules/CoreA55/OpenAMP_MHU/: platform_info.c
