SET(SOURCES components/ui_comp_backmenu.c
    components/ui_comp_checkboxoption.c
    components/ui_comp_contorlbutton.c
    components/ui_comp_dropdown.c
    components/ui_comp_header.c
    components/ui_comp_input.c
    components/ui_comp_keyboardl.c
    components/ui_comp_menu.c
    components/ui_comp_menubutton.c
    components/ui_comp_numpad_m.c
    components/ui_comp_popup.c
    components/ui_comp_primarybtn.c
    components/ui_comp_rollercard.c
    components/ui_comp_rollersmall.c
    components/ui_comp_secondarybtn.c
    components/ui_comp_switch.c
    components/ui_comp_tabbutton.c
    components/ui_comp_tabcontentinitial.c
    components/ui_comp.c
    screens/ui_Screen__StartupSplash.c
    screens/ui_Screen__Initial_Setup.c
    screens/ui_Screen__Select_Option.c
    screens/ui_Screen__Generic_Password.c
    screens/ui_Screen__Home.c
    screens/ui_Screen__Pump_Settings.c
    screens/ui_Screen__Advanced_Settings.c
    screens/ui_Screen__Firmware_Update.c
    screens/ui_Screen__Maintenance.c
    screens/ui_Screen__Self_Test.c
    screens/ui_Screen__Communications.c
    screens/ui_Screen__Popup_Modal.c
    ui_theme_manager.c
    ui_themes.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_1103707581.c
    images/ui_img_back_png.c
    images/ui_img_home_menus_usb_png.c
    images/ui_img_home_menus_desktop_png.c
    images/ui_img_home_menus_wifi_png.c
    images/ui_img_logo_png.c
    images/ui_img_initial_setup_png.c
    images/ui_img_checkbox_checked_vector_png.c
    images/ui_img_home_house_png.c
    images/ui_img_home_pump_png.c
    images/ui_img_home_setup_png.c
    images/ui_img_home_chevron_png.c
    images/ui_img_home_chevron_down_png.c
    images/ui_img_home_buttons_purge_png.c
    images/ui_img_arrow_png.c
    images/ui_img_chack_png.c
    images/ui_img_1103710656.c
    images/ui_img_1103709631.c
    images/ui_img_1103704258.c
    images/ui_img_1103703233.c
    images/ui_img_1103706308.c
    images/ui_img_1103705283.c
    images/ui_img_1103699894.c
    images/ui_img_1103698869.c
    images/ui_img_1184778841.c
    images/ui_img_1184777816.c
    images/ui_img_1184780891.c
    images/ui_img_1184779866.c
    images/ui_img_1184774493.c
    images/ui_img_1184773468.c
    images/ui_img_option1_png.c
    fonts/ui_font_H1_Bold.c
    fonts/ui_font_P1_Bold.c
    fonts/ui_font_P2_Med.c
    fonts/ui_font_P2_SBold.c
    fonts/ui_font_P3_Bold.c)

add_library(ui ${SOURCES})
